<resources>
    <string name="app_name">TicketToRide</string>
    <string name="ok">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="draw_card">Draw Card</string>
    <string name="place_train">Place Train</string>
    <string name="destination_cards">Destinations</string>
    <string name="history">History</string>
    <string name="chat">Chat</string>
    <string name="demo">Demo Next Action</string>
    <string name="send">Send</string>
    <string name="colon">:</string>
    <string name="close">Close</string>
    <string name="defaultIP">10.0.2.2</string>
    <string name="defaultPort">8080</string>
    <string name="routeSelectionTitle">Pick a Route</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="cards">Select Cards:</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
</resources>
