<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="deltamonstarz.tickettoride.views.gamePlay.GameFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <FrameLayout
                android:id="@+id/player_card_fragment"
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_width="100dp">
            </FrameLayout>

            <SurfaceView
                android:layout_height="match_parent"
                android:id="@+id/surfaceView"
                android:layout_weight="1"
                android:layout_width="0dp"/>

            <FrameLayout
                android:id="@+id/players_info_fragment"
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_width="125dp">
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <Button
                android:text="@string/draw_card"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/draw_card_button"
                android:layout_weight="1"/>

            <Button
                android:text="@string/place_train"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/place_train_button"
                android:layout_weight="1"/>

            <Button
                android:text="@string/destination_cards"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/destination_cards_button"
                android:layout_weight="1"/>

            <Button
                android:text="@string/history"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/history_button"
                android:layout_weight="1"/>

            <Button
                android:text="@string/chat"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/chat_button"
                android:layout_weight="1"/>

            <Button
                android:text="@string/demo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/demo_button"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
