<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:context="deltamonstarz.tickettoride.views.gamePlay.RouteSelectionFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:baselineAligned="false"
                      android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_marginTop="5dp"
                      android:layout_weight="1">

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/from"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/sourceCities"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/to"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/destinationCities"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/cards"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/cardColorList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <Button
                android:id="@+id/close_dialog"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/confirm_selection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ok"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
